<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ProgressBar
            android:id="@+id/pb_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="282dp"
            android:layout_height="264dp"
            android:layout_marginTop="52dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bekraf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/dummy_desc" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail" />


        <TextView
            android:id="@+id/username_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

<!--        <com.google.android.material.appbar.AppBarLayout-->
<!--            android:id="@+id/appBarLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/username_login"-->
<!--            tools:ignore="MissingConstraints">-->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgRv"
            app:tabTextColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_login"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_favorite"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout_favorite"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp" />

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/tab_layout_favorite"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@color/colorPrimary"-->
<!--            app:layout_collapseMode="pin"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/username_login"-->
<!--            app:tabGravity="fill"-->
<!--            app:tabMaxWidth="0dp"-->
<!--            app:tabMode="fixed" />-->

<!--        </com.google.android.material.appbar.AppBarLayout>-->

<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:id="@+id/vp_favorite"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="400dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tab_layout_favorite"-->
<!--            app:layout_constraintVertical_bias="0.0"-->
<!--            tools:layout_editor_absoluteX="16dp" >-->

<!--        </androidx.viewpager.widget.ViewPager>-->

<!--        <TextView-->
<!--            android:id="@+id/textView4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/bio"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="22sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/username_login" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_bio"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:text="@string/dummy_desc"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView4" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>